--- a/catalog.html
+++ b/catalog.html
@@ -118,8 +118,8 @@
                 <input class="slider" type="range" id="range-price" name="price" min="0" max="9000">
                 </fieldset>
                 <div class="button-search">
-                  <input class="submit" type="submit" value="ПРИМЕНИТЬ">
-                <input class="reset" type="reset" value="СБРОСИТЬ">
+                  <input class="button select" type="submit" value="ПРИМЕНИТЬ">
+                <input class="button cancel" type="reset" value="СБРОСИТЬ">
               </div>
               </div>
             </form>
