--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
       </li>
     </ul>
   </header>
-    <div class="filter"  data-test="filter">
+    <div class="filter" data-test="filter">
     <h2 class="visually-hidden" hidden>Список гостиниц с фильтрами</h2>
     <form class="catalog-filters" action="https://echo.htmlacademy.ru/" method="get">
     <fieldset class="catalog-filter hotels-filter">
@@ -65,20 +65,23 @@
       <ul class="catalog-filter-list">
         <li class="filter-item">
           <label class="control">
-            <input class="control-input" type="checkbox" name="pool" checked>
-        Бассейн
+            <input class="control-input visually-hidden" type="checkbox" name="pool" checked>
+            <span class="control-mark"></span>
+            <span class="control-label">Бассейн</span>
+          </label>
+          </li>
+        <li class="filter-item">
+          <label class="control">
+            <input class="control-input visually-hidden" type="checkbox" name="parking" checked>
+            <span class="control-mark"></span>
+            <span class="control-label">Парковка</span>
           </label>
         </li>
         <li class="filter-item">
           <label class="control">
-            <input class="control-input" type="checkbox" name="parking" checked>
-        Парковка
-          </label>
-        </li>
-        <li class="filter-item">
-          <label class="control">
-            <input class="control-input" type="checkbox" name="wifi">
-            Wi-Fi
+            <input class="control-input visually-hidden" type="checkbox" name="wifi">
+            <span class="control-mark"></span>
+            <span class="control-label">Wi-Fi</span>
           </label>
         </li>
       </ul>
@@ -88,34 +91,51 @@
             <ul class="catalog-filter-list">
               <li class="filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="type-house" value="Hotel" checked>
-                  Гостиница
+                  <input class="control-input visually-hidden" type="radio" name="type-house" value="hotel" checked>
+                  <span class="control-mark"></span>
+                <span class="control-label">Гостиница</span>
                 </label>
               </li>
               <li class="filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="type-house" value="Motel">
-                  Мотель
+                  <input class="control-input visually-hidden" type="radio" name="type-house" value="motel">
+                  <span class="control-mark"></span>
+                <span class="control-label">Мотель</span>
                 </label>
               </li>
               <li class="filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="type-house" value="Appart">
-                  Апартаменты
+                  <input class="control-input visually-hidden" type="radio" name="type-house" value="appart">
+                  <span class="control-mark"></span>
+                <span class="control-label">Апартаменты</span>
                 </label>
               </li>
             </ul>
             </fieldset>
+
               <fieldset class="catalog-filter price-filter">
                 <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                 <div class="wprapper-price">
-                <label for="min-price"><span class="visually-hidden" hidden>минимальная цена</span></label>
-                <input class="control-input min-price" type="text" placeholder="от" name="min-price" value="0">
-                  <label for="max-price"><span class="visually-hidden" hidden>максимальная цена</span></label>
-                <input class="control-input max-price" type="text" placeholder="до" name="max-price" value="9000">
+                  <label class="control">
+                  <span class="price-word">от</span>
+                <input class="control-input min-price" type="number" name="min-price" value="0">
+                </label>
+                <label class="control">
+                  <span class="price-word">до</span>
+                <input class="control-input max-price" type="number" name="max-price" value="9000">
+                </label>
                 </div>
-                <input class="slider" type="range" id="range-price" name="price" min="0" max="9000">
-                </fieldset>
+                <div class="slider">
+                <div class="range">
+                  <button class="range-toggle toggle-min">
+                    <span class="visually-hidden">Изменить минимальную цену.</span>
+                  </button>
+                  <button class="range-toggle toggle-max">
+                    <span class="visually-hidden">Изменить максимальную цену.</span>
+                  </button>
+                </div>
+              </div>
+              </fieldset>
                 <div class="button-search">
                   <input class="button select" type="submit" value="ПРИМЕНИТЬ">
                 <input class="button cancel" type="reset" value="СБРОСИТЬ">
