--- a/catalog.html
+++ b/catalog.html
@@ -118,11 +118,11 @@
                 <div class="wprapper-price">
                   <label class="control">
                   <span class="price-word">от</span>
-                <input class="control-input min-price" type="number" name="min-price" value="0">
+                <input class="control-input min-price" type="number" name="start-price" value="0">
                 </label>
                 <label class="control">
                   <span class="price-word">до</span>
-                <input class="control-input max-price" type="number" name="max-price" value="9000">
+                <input class="control-input max-price" type="number" name="end-price" value="9000">
                 </label>
                 </div>
                 <div class="slider">
