--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       <h2 class="title invert">Подпишитесь на рассылку</h2>
     <p class="description">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="subscribe-email">Email</label>
         <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email">
         <button class="button select" type="submit">Подписаться</button>
       </form>
@@ -182,6 +183,45 @@
   </svg>
     <span class="visually-hidden">Сайт создан htmlacademy</span>
     </a>
+        </div>
+        <div class="modal-container">
+          <div class="modal modal-search">
+          <button class="close-button">
+            <span class="visually-hidden">Закрыть</span>
+          </button>
+          <section class="modal-content">
+            <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+            <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+
+              <p class="field-group modal-form-date">
+                <label class="modal-label" for="modal-date-start">
+                  Дата заезда:</label>
+              <input class="field" type="text" id="modal-date-start" name="modal-date-start" placeholder="27 апреля 2020">
+            </p>
+              <p class="modal-info">Мы не можем отправить вас в прошлое.</p>
+
+              <p class="field-group modal-form-date">
+                <label class="modal-label" for="modal-date-end">
+                  Дата выезда:</label>
+              <input class="field" type="text" id="modal-date-end" name="modal-date-end" placeholder="1 сентября 2023">
+            </p>
+              <p class="modal-info">На эти даты есть свободные номера. Пока есть.</p>
+
+              <p class="field-group modal-guests">
+              <label class="modal-label" for="adult">
+                Взрослые:</label>
+                <input class="control-input adult" id="adult" type="number" name="adult" value="2">
+              </p>
+              <p class="field-group modal-guests">
+                <label class="modal-label" for="kids">
+                  Дети:</label>
+                  <input class="control-input kids" id="kids" type="number" name="kids" value="2">
+                </p>
+                <button class="button select" type="submit">Найти</button>
+      </form>
+            </form>
+          </section>
+        </div>
         </div>
     </footer>
   </div>
