--- a/catalog.html
+++ b/catalog.html
@@ -61,7 +61,7 @@
     <h2 class="visually-hidden" hidden>Список гостиниц с фильтрами</h2>
     <form class="catalog-filters" action="https://echo.htmlacademy.ru/" method="get">
     <fieldset class="catalog-filter hotels-filter">
-      <legend class="catalog-filter-title">Инфраструктура</legend>
+      <legend class="catalog-filter-title">Инфраструктура:</legend>
       <ul class="catalog-filter-list">
         <li class="filter-item">
           <label class="control">
@@ -300,6 +300,7 @@
       <h2 class="title">Подпишитесь на рассылку</h2>
       <p class="description">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label class="visually-hidden" for="subscribe-email">Email</label>
           <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
           <button class="button select" type="submit">Подписаться</button>
         </form>
