:heavy_check_mark: Сборка #8

--- a/8/catalog.html
+++ b/8/catalog.html
@@ -154,7 +154,7 @@
     </select>
       <ul class="show">
       <li class="button-show active">
-    <a class="kard" href="#" >
+    <a class="view" href="#" >
       <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M4 0H0V6H4V0Z" fill="black"/>
         <path d="M16 0H12V6H16V0Z" fill="black"/>
@@ -167,7 +167,7 @@
     </a>
   </li>
     <li class="button-show">
-    <a class="slide" href="#" >
+    <a class="view" href="#" >
       <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_94248_243)">
         <path d="M16 12H0V14H16V12Z" fill="black"/>
@@ -183,7 +183,7 @@
     </a>
   </li>
     <li class="button-show">
-    <a class="list" href="#" >
+    <a class="view" href="#" >
       <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_94248_336)">
         <path d="M2 0H0V2H2V0Z" fill="black"/>
