--- a/index.html
+++ b/index.html
@@ -195,18 +195,17 @@
     <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
 
     <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
-
-      <p class="field-group modal-form-date">
+<span class="modal-form-date">
+      <p class="field-group">
         <label class="modal-label" for="modal-date-start">
           Дата заезда:</label>
       <input class="field-modal" type="text" id="modal-date-start" name="modal-date-start" value="27 апреля 2020">
     </p>
-
       <p class="modal-info error">Мы не можем отправить вас в прошлое.</p>
 </span>
 
-<span class="modal-date-wrapper">
-  <p class="field-group modal-form-date">
+<span class="modal-form-date">
+  <p class="field-group">
         <label class="modal-label" for="modal-date-end">
           Дата выезда:</label>
       <input class="field-modal" type="text" id="modal-date-end" name="modal-date-end" value="1 сентября 2023">
