--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </div>
               </div>
               </div>
-              <button class="button select" type="submit">Найти</button>
+              <button class="modal-button select" type="submit">Найти</button>
 
 </form>
 </section>
