--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
                   <span class="price-word">до</span>
                 <input class="control-input max-price" type="number" name="end-price" value="9000">
                 </label>
-                </div>
+              </div>
                 <div class="slider">
                 <div class="range">
                   <button class="range-toggle toggle-min">
@@ -137,8 +137,8 @@
               </div>
               </fieldset>
                 <div class="button-search">
-                  <input class="button select" type="submit" value="ПРИМЕНИТЬ">
-                <input class="button cancel" type="reset" value="СБРОСИТЬ">
+                  <button class="button select" type="submit">ПРИМЕНИТЬ</button>
+                <button class="button cancel" type="reset">СБРОСИТЬ</button>
               </div>
             </form>
 </div>
