:heavy_check_mark: Сборка #8

--- a/8/catalog.html
+++ b/8/catalog.html
@@ -125,7 +125,7 @@
                   <span class="price-word">до</span>
                 <input class="control-input max-price" type="number" name="end-price" value="9000">
                 </label>
-                </div>
+              </div>
                 <div class="slider">
                 <div class="range">
                   <button class="range-toggle toggle-min">
@@ -138,8 +138,8 @@
               </div>
               </fieldset>
                 <div class="button-search">
-                  <input class="button select" type="submit" value="ПРИМЕНИТЬ">
-                <input class="button cancel" type="reset" value="СБРОСИТЬ">
+                  <button class="button select" type="submit">ПРИМЕНИТЬ</button>
+                <button class="button cancel" type="reset">СБРОСИТЬ</button>
               </div>
             </form>
 </div>
@@ -301,11 +301,11 @@
       <h2 class="title">Подпишитесь на рассылку</h2>
       <p class="description">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="visually-hidden" for="subscribe-email">Email</label>
-          <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
+            <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
           <button class="button select" type="submit">Подписаться</button>
         </form>
 </section>
+
 </main>
 <footer>
   <div class="footer-container" data-test="footer">
