--- a/8/modal.html
+++ b/8/modal.html
@@ -120,7 +120,7 @@
   <section class="search-hotels">
     <h2 class="title">Заинтересовались?</h2>
     <p class="description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-    <a class="button" href="modal.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+    <a class="button" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
     </section>
 
   <section class="subscribe main" data-test="subscribe">
@@ -132,7 +132,7 @@
       </form>
 </section>
 
-  <div class="modal-container modal-container-close">
+  <div class="modal-container">
     <div class="modal modal-search">
     <button class="close-button">
       <span class="visually-hidden">Закрыть</span>
