--- a/8/catalog.html
+++ b/8/catalog.html
@@ -47,17 +47,18 @@
     <h1 class="inner-header-title">Гостиницы Седоны</h1>
     <ul class="breadcrumbs">
       <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link" href="index.html">
+        <a class="breadcrumbs-link icon" href="index.html">
           <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M6.5 0.5L0.5 6.30006V12.5001H12.5V6.30006L6.5 0.5ZM11.5 11.5001H1.5V6.70005L6.5 1.9L11.5 6.70005V11.5001Z" fill="white"/>
             <path d="M4.5 10.5001H5.5V8.00005H7.5V10.5001H8.5V7.00005H4.5V10.5001Z" fill="white"/>
             </svg>
             <span class="visually-hidden">Переход на главную страницу</span></a>
         </li>
-        <li class="breadcrumbs-item">Гостиницы
-      </li>
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link" href="index.html">Гостиницы</a>
+        </li>
     </ul>
-  </header>
+      </header>
     <div class="filter" data-test="filter">
     <h2 class="visually-hidden" hidden>Список гостиниц с фильтрами</h2>
     <form class="catalog-filters" action="https://echo.htmlacademy.ru/" method="get">
