--- a/modal.html
+++ b/modal.html
@@ -179,7 +179,7 @@
       </div>
         </div>
 
-        <div class="amount-wrapper">
+        <div class="amount-wrapper kids">
           <label class="modal-label" for="kids">
           Дети:</label>
           <span class="tooltip">
