:heavy_check_mark: Сборка #8

--- a/8/modal.html
+++ b/8/modal.html
@@ -180,7 +180,7 @@
       </div>
         </div>
 
-        <div class="amount-wrapper">
+        <div class="amount-wrapper kids">
           <label class="modal-label" for="kids">
           Дети:</label>
           <span class="tooltip">
