--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <title>Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="page-container">
@@ -116,20 +116,24 @@
       </li>
   </ul>
   </section>
-  <section class="search-hotels">
+
+  <div data-test="search">
+  <div class="search-hotels">
     <h2 class="title">Заинтересовались?</h2>
     <p class="description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
     <a class="button" href="modal.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
-    </section>
+    </div>
+    </div>
 
-  <section class="subscribe main" data-test="subscribe">
-    <h2 class="title invert">Подпишитесь на рассылку</h2>
-    <p class="description">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-          <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
-        <button class="button select" type="submit">Подписаться</button>
-      </form>
-</section>
+
+    <div class="subscribe main" data-test="subscribe">
+      <h2 class="title invert">Подпишитесь на рассылку</h2>
+      <p class="description">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
+          <button class="button select" type="submit">Подписаться</button>
+        </form>
+  </div>
 
 <div class="modal-container modal-container-close">
   <div class="modal modal-search">
