--- a/index.html
+++ b/index.html
@@ -135,32 +135,32 @@
         </form>
   </div>
 
-<div class="modal-container modal-container-close">
-  <div class="modal modal-search">
-  <button class="close-button">
-    <span class="visually-hidden">Закрыть</span>
-  </button>
-<section class="modal-content">
-  <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+  <div class="modal-container modal-container-close">
+    <div class="modal modal-search" data-test="modal">
+    <button class="close-button" type="button">
+      <span class="visually-hidden">Закрыть</span>
+    </button>
+  <section class="modal-content">
+    <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
 
-  <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+    <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
 
-<div class="modal-form-date">
-    <span class="field-group">
-      <label class="modal-label" for="modal-date-start">
-        Дата заезда:</label>
-    <input class="field-modal" type="text" id="modal-date-start" name="modal-date-start" value="27 апреля 2020">
-  </span>
-    <p class="modal-info error">Мы не можем отправить вас в прошлое.</p>
-</div>
-<div class="modal-form-date end">
-<p class="field-group">
-      <label class="modal-label" for="modal-date-end">
-        Дата выезда:</label>
-    <input class="field-modal" type="text" id="modal-date-end" name="modal-date-end" value="1 сентября 2023">
-  </p>
-    <p class="modal-info correct">На эти даты есть свободные номера. Пока есть.</p>
+  <div class="modal-form-date">
+      <span class="field-group">
+        <label class="modal-label" for="modal-date-start">
+          Дата заезда:</label>
+      <input class="field-modal" type="text" id="modal-date-start" name="modal-date-start" value="27 апреля 2020">
+    </span>
+      <p class="modal-info error">Мы не можем отправить вас в прошлое.</p>
   </div>
+  <div class="modal-form-date end">
+  <p class="field-group">
+        <label class="modal-label" for="modal-date-end">
+          Дата выезда:</label>
+      <input class="field-modal" type="text" id="modal-date-end" name="modal-date-end" value="1 сентября 2023">
+    </p>
+      <p class="modal-info correct">На эти даты есть свободные номера. Пока есть.</p>
+    </div>
 
     <div class="modal-guests">
       <div class="amount-wrapper adult">
