--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <title>Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-  </head>
+    </head>
   <body>
     <div class="page-container">
       <header class="page-header" data-test="header">
@@ -116,47 +116,51 @@
       </li>
   </ul>
   </section>
-  <section class="search-hotels">
+
+  <div data-test="search">
+  <div class="search-hotels">
     <h2 class="title">Заинтересовались?</h2>
     <p class="description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
     <a class="button" href="modal.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
-    </section>
+    </div>
+    </div>
 
-  <section class="subscribe main" data-test="subscribe">
-    <h2 class="title invert">Подпишитесь на рассылку</h2>
-    <p class="description">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-          <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
-        <button class="button select" type="submit">Подписаться</button>
-      </form>
-</section>
 
-<div class="modal-container modal-container-close">
-  <div class="modal modal-search">
-  <button class="close-button">
-    <span class="visually-hidden">Закрыть</span>
-  </button>
-<section class="modal-content">
-  <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
-
-  <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
-
-<div class="modal-form-date">
-    <span class="field-group">
-      <label class="modal-label" for="modal-date-start">
-        Дата заезда:</label>
-    <input class="field-modal" type="text" id="modal-date-start" name="modal-date-start" value="27 апреля 2020">
-  </span>
-    <p class="modal-info error">Мы не можем отправить вас в прошлое.</p>
-</div>
-<div class="modal-form-date end">
-<p class="field-group">
-      <label class="modal-label" for="modal-date-end">
-        Дата выезда:</label>
-    <input class="field-modal" type="text" id="modal-date-end" name="modal-date-end" value="1 сентября 2023">
-  </p>
-    <p class="modal-info correct">На эти даты есть свободные номера. Пока есть.</p>
+    <div class="subscribe main" data-test="subscribe">
+      <h2 class="title invert">Подпишитесь на рассылку</h2>
+      <p class="description">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="field-mail" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
+          <button class="button select" type="submit">Подписаться</button>
+        </form>
   </div>
+
+  <div class="modal-container modal-container-close">
+    <div class="modal modal-search" data-test="modal">
+    <button class="close-button" type="button">
+      <span class="visually-hidden">Закрыть</span>
+    </button>
+  <section class="modal-content">
+    <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+
+    <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+
+  <div class="modal-form-date">
+      <span class="field-group">
+        <label class="modal-label" for="modal-date-start">
+          Дата заезда:</label>
+      <input class="field-modal" type="text" id="modal-date-start" name="modal-date-start" value="27 апреля 2020">
+    </span>
+      <p class="modal-info error">Мы не можем отправить вас в прошлое.</p>
+  </div>
+  <div class="modal-form-date end">
+  <p class="field-group">
+        <label class="modal-label" for="modal-date-end">
+          Дата выезда:</label>
+      <input class="field-modal" type="text" id="modal-date-end" name="modal-date-end" value="1 сентября 2023">
+    </p>
+      <p class="modal-info correct">На эти даты есть свободные номера. Пока есть.</p>
+    </div>
 
     <div class="modal-guests">
       <div class="amount-wrapper adult">
