--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
                   <label class="modal-label" for="adult">
                     Взрослые:</label>
                   <div class="amount-guests">
-                    <button class="amount minus">
+                    <button class="amount minus" type="button">
                       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M3 9V11H17V9H3Z" fill="#756157" fill-opacity="0.3" />
                       </svg>
                       <span class="visually-hidden">Уменьшить количество.</span>
                     </button>
                     <input class="input-guests" id="adult" type="number" name="adult" value="2">
-                    <button class="amount plus">
+                    <button class="amount plus" type="button">
                       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z" fill="#756157" fill-opacity="0.3" />
                       </svg>
@@ -201,14 +201,14 @@
                       будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
                   </span>
                   <div class="amount-guests">
-                    <button class="amount minus">
+                    <button class="amount minus" type="button">
                       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M3 9V11H17V9H3Z" fill="#756157" fill-opacity="0.3" />
                       </svg>
                       <span class="visually-hidden">Уменьшить количество.</span>
                     </button>
                     <input class="input-guests" id="kids" type="number" name="adult" value="2">
-                    <button class="amount plus">
+                    <button class="amount plus" type="button">
                       <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M17 9H11V3H9V9H3V11H9V17H11V11H17V9Z" fill="#756157" fill-opacity="0.3" />
                       </svg>
